--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,16 @@
 </head>
 
 <body class="body">
-<div class="container">
-<div class="row">
-	<h1>Monster Registration</h1>
-	<form id='submit'>
-		<input type="text" name="name" placeholder="name" />
-		<input type="text" name="age" placeholder="age" />
-		<input type="text" name="description" placeholder="description" />
-		<input type="number" name="sightings" placeholder="0" />
-		<input type="text" name="photoUrl" placeholder="Image URL" />
-		<select type="text" name="type">
+	<div class="container">
+		<div class="row upper-row">
+			<h1>Monster Registration</h1>
+			<form id='submit'>
+				<input type="text" name="name" required placeholder="name" />
+				<input type="text" name="age" required placeholder="age" />
+				<input type="text" name="description" required placeholder="description" />
+				<input type="number" name="sightings" required placeholder="0" />
+				<input type="text" name="photoUrl" required placeholder="Image URL" />
+				<select type="text" name="type">
     <option value="">--Select Type--</option>
     <option value="vampire">Vampire</option>
     <option value="zombie">Zombie</option>
@@ -30,21 +30,18 @@
     <option value="other">Other</option>
     <option value="unknown">Unknown</option>
   </select>
-		<button id='submit' type="submit">Add</button>
-	</form>
-</div>
-</div>
-
-	<div id='monsterCards'>
-		<div class="container">
-			<div class="row">
-
-
-			</div>
+				<button type="submit">Add</button>
+			</form>
 		</div>
+	</div>
 
+
+<div class="container">
+	<div class='row'id='monster-cards'>
 
 	</div>
+	</div>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="app/monster-service.js"></script>
 	<script src="app/monster-controller.js"></script>
